# thanatosmfr-cgol

./: .gitignore  Cargo.toml
.cargo/: config.toml
benches/: simulation.rs
src/: conway.rs  lib.rs  main.rs  orchestration.rs  startup.rs
src/conway/: conway.rs  mod.rs  simulation.rs
src/mfrac/: hash.rs  mfrac.rs  mod.rs  pipeline.rs
src/persistence/: database.rs
src/thanatos/: canonical.rs  mod.rs  tmfroc.rs
src/types/: canonical_configuration.rs  cell_configuration.rs  cell_coord.rs  mfrac_report.rs  mod.rs
src/ui/: app.rs
