[package]
name = "tmfroc"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.33.3"
wyhash = "0.6.0"
eframe = { version = "0.33.3", features = ["wgpu"] }
crossbeam = "0.8.4"
rand = "0.10.0-rc.9"
pprof2 = { version = "0.13.1", features = ["flamegraph", "prost-codec"] }
hashbrown = "0.16.1"
fxhash = "0.2.1"

[target.x86_64-pc-windows-gnu]
rustflags = ["-C", "target-feature=+crt-static"]

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "simulation"
harness = false